# Rock-vs-Mine

./: .gitignore  Dockerfile  app.py  classification_report.txt  docker-compose.yml  lr_classification_report.txt  main.py  model.pkl  model.py  notebook.ipynb  prefect.yaml  project.py  pyproject.toml  report.json  streamlit.py
Workspace/01997c07-c408-79a6-93e3-5b13593a8ef3/: dashboard.json  metadata.json
Workspace/01997c07-c408-79a6-93e3-5b13593a8ef3/snapshots/: 01997c07-c445-7129-800f-cb7bfe8e4e41.json
Workspace/01997c18-e974-784f-83f4-28a27baba424/: dashboard.json  metadata.json
Workspace/01997c18-e974-784f-83f4-28a27baba424/snapshots/: 01997c18-e976-7877-8fd6-d42bbba1ff06.json
Workspace/01997c21-1c6f-7512-96b3-b5325bd4e53a/: dashboard.json  metadata.json
Workspace/01997c21-1c6f-7512-96b3-b5325bd4e53a/snapshots/: 01997c21-1c70-76e0-82e2-b0b1c76dbe17.json
Workspace/01997c34-254d-791a-8472-f831ad4fbf6c/: dashboard.json  metadata.json
Workspace/01997c46-85fa-736b-901a-827b60ef6c4c/: dashboard.json  metadata.json
Workspace/0199bb02-567f-7421-aa62-96d0669ee6b9/: dashboard.json  metadata.json
config/: grafana_datasources.yaml  grafana_datasources.yml
data/: Sonar.csv  rock_vs_mine_dataset.csv
data/predicted_data/: current_data.csv  data.csv  otherdata.csv  reference_data.csv
model/: pipeline.pkl
tests/: test_functions.py
workspace/01991a42-5393-78da-a5a6-af2544f2ec81/: metadata.json
workspace/01991e37-1ec7-7965-af46-07ccff981fe8/: metadata.json
workspace/0199332e-a1ce-7f0e-b941-bee2dbeae08e/: dashboard.json  metadata.json
(+6 files in other folders)
