[project]
name = "rock-vs-mine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagshub>=0.6.1",
    "evidently>=0.7.14",
    "flask>=3.1.1",
    "matplotlib>=3.10.3",
    "mlflow==2.10.2",
    "pandas>=2.3.1",
    "prefect>=3.4.14",
    "psycopg>=3.2.9",
    "psycopg-binary>=3.2.9",
    "pyarrow>=15.0.2",
    "pytest>=8.4.2",
    "scikit-learn==1.7.0",
    "setuptools>=80.9.0",
    "tqdm>=4.67.1",
]
